api/crud-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: crud-postgres
  name: crud-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: crud-postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/api-default: "true"
        io.kompose.service: crud-postgres
    spec:
      containers:
        - image: crud-postgres
          name: crud-postgres
          ports:
            - containerPort: 8004
          resources: {}
      restartPolicy: Always
status: {}
