api/educative-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: educative-data
  name: educative-data
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: educative-data
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/api-default: "true"
        io.kompose.service: educative-data
    spec:
      containers:
        - image: educative-data
          name: educative-data
          ports:
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
