api/crud-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: crud-mongodb
  name: crud-mongodb
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: crud-mongodb
status:
  loadBalancer: {}
