api/crud-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: crud-postgres
  name: crud-postgres
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8004
  selector:
    io.kompose.service: crud-postgres
status:
  loadBalancer: {}
