api/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
spec:
  ports:
    - name: "8005"
      port: 8005
      targetPort: 8005
  selector:
    io.kompose.service: users
status:
  loadBalancer: {}
