api/webscraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: webscraper
  name: webscraper
spec:
  ports:
    - name: "8006"
      port: 8006
      targetPort: 8006
  selector:
    io.kompose.service: webscraper
status:
  loadBalancer: {}
